--- a/app/src/main/res/layout/activity_register_organization.xml
+++ b/app/src/main/res/layout/activity_register_organization.xml
@@ -11,11 +11,11 @@
         android:id="@+id/editTextOrganiName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="30dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="150dp"
-        android:layout_marginEnd="30dp"
         android:ems="10"
-        android:hint="@string/nombre_de_la_organizaci_n"
+        android:hint="@string/organizationName"
         android:inputType="textPersonName"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,11 +26,11 @@
         android:id="@+id/editTextOrganiPass"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="30dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="30dp"
         android:ems="10"
-        android:hint="@string/contrase_a"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,11 +41,11 @@
         android:id="@+id/editTextOrganiPassConf"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="30dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="30dp"
         android:ems="10"
-        android:hint="@string/repita_la_contrase_a"
+        android:hint="@string/passwordRepeat"
         android:inputType="textPassword"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,11 +56,12 @@
         android:id="@+id/editTextOrganiNif"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="30dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="30dp"
+        android:autofillHints=""
         android:ems="10"
-        android:hint="NIF"
+        android:hint="@string/nif"
         android:inputType="textPersonName"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,10 +87,10 @@
         android:id="@+id/buttonOrganiRegister"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
         android:layout_marginBottom="30dp"
-        android:text="Registrarse"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:text="@string/register"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
