--- a/app/src/main/res/layout/item_route_search.xml
+++ b/app/src/main/res/layout/item_route_search.xml
@@ -57,10 +57,10 @@
 
                 <TextView
                     android:id="@+id/textView9"
-                    android:layout_width="120dp"
+                    android:layout_width="220dp"
                     android:layout_height="wrap_content"
                     android:paddingLeft="150dp"
-                    android:text="Duración:" />
+                    android:text="@string/estimated_time" />
 
                 <TextView
                     android:id="@+id/routeDuration"
@@ -88,7 +88,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="150dp"
-                    android:text="Longitud:" />
+                    android:text="@string/length" />
 
                 <TextView
                     android:id="@+id/routeLenght"
@@ -128,6 +128,25 @@
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp"
                     android:text="Puntos" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+
+                <TextView
+                    android:id="@+id/textView_orderedRouteText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ordered_route"
+                    android:textAlignment="textEnd" />
+
+                <TextView
+                    android:id="@+id/textView_orderedRouteResult"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView"
+                    android:textAlignment="center" />
             </TableRow>
         </TableLayout>
     </LinearLayout>
