--- a/app/src/main/res/layout/activity_route_finished.xml
+++ b/app/src/main/res/layout/activity_route_finished.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RouteFinishedActivity">
+    tools:context=".RouteFinishedActivity"
+android:background="@drawable/geometrics_cut">
 
     <TextView
         android:id="@+id/textViewRouteFinished"
