--- a/app/src/main/res/layout/cupon_item.xml
+++ b/app/src/main/res/layout/cupon_item.xml
@@ -8,4 +8,5 @@
     android:paddingStart="?android:attr/listPreferredItemPaddingStart"
     android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
-    android:drawableLeft="@drawable/cupon"/>
+    android:drawableLeft="@drawable/cupon"
+    android:background="@color/background"/>
