--- a/app/src/main/res/layout/fragment_route_search.xml
+++ b/app/src/main/res/layout/fragment_route_search.xml
@@ -6,7 +6,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".mainMenu.searcher.RouteSearchFragment"
-        style="@style/Theme.MaterialComponents.Light.NoActionBar">
+        style="@style/Theme.MaterialComponents.Light.NoActionBar"
+        android:background="@color/background">
 
     <Button
         android:id="@+id/btn_search"
