--- a/app/src/main/res/layout/fragment_route_search_result.xml
+++ b/app/src/main/res/layout/fragment_route_search_result.xml
@@ -5,7 +5,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".mainMenu.searcher.RouteSearchResultFragment">
+        tools:context=".mainMenu.searcher.RouteSearchResultFragment"
+        android:background="@color/background">
 
     <Button
             android:id="@+id/button_second"
