--- a/app/src/main/res/layout/fragment_user_routes.xml
+++ b/app/src/main/res/layout/fragment_user_routes.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="@color/background">
 
     <TextView
         android:id="@+id/item_number"
