--- a/app/src/main/res/layout/fragment_user_search.xml
+++ b/app/src/main/res/layout/fragment_user_search.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:background="@color/background">
     <!-- tools:context=".codigoC correspondiente" -->
 
     <com.google.android.material.appbar.AppBarLayout
@@ -14,7 +15,7 @@
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/background"
         android:id="@+id/toolbar">
 
     <ImageView
@@ -39,6 +40,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/bar"
         android:id="@+id/recycler_view"
-        android:background="#FFFFFF">
+        android:background="@color/background">
     </androidx.recyclerview.widget.RecyclerView>
 </RelativeLayout>
