Details in the profile and in the user routes

--- a/app/src/main/res/layout/activity_route_runner.xml
+++ b/app/src/main/res/layout/activity_route_runner.xml
@@ -51,7 +51,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@android:drawable/ic_delete"
-        app:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/background"
         style="@style/LargeButtonText"
         android:textColor="@color/white"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
