--- a/app/src/main/res/layout/activity_opening.xml
+++ b/app/src/main/res/layout/activity_opening.xml
@@ -38,6 +38,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView3"
             android:textColor="#000000"
+            android:fontFamily="@font/righteous"
             app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginBottom="59dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
