--- a/app/src/main/res/layout/activity_introduce_new_route_data.xml
+++ b/app/src/main/res/layout/activity_introduce_new_route_data.xml
@@ -62,7 +62,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:entries="@array/route_category"
+                        android:entries="@array/route_creation_route_category"
                         android:spinnerMode="dropdown" android:layout_alignParentTop="true"
                         android:layout_marginStart="0dp"
                         android:layout_marginBottom="8dp"/>
