--- a/app/src/main/res/layout/item_route_search.xml
+++ b/app/src/main/res/layout/item_route_search.xml
@@ -102,8 +102,7 @@
                     android:layout_height="match_parent"
                     android:paddingLeft="30dp"
                     android:paddingRight="0dp"
-                    android:text="TextView"
-                    android:textColor="#000000" />
+                    android:text="TextView" />
 
                 <TextView
                     android:id="@+id/textView6"
