--- a/app/src/main/res/layout/fragment_route_search.xml
+++ b/app/src/main/res/layout/fragment_route_search.xml
@@ -10,7 +10,7 @@
         android:background="@color/background">
 
     <Button
-        android:id="@+id/btn_search"
+        android:id="@+id/button_route_searcher"
         android:layout_width="200dp"
         android:layout_height="45dp"
         android:layout_marginBottom="108dp"
@@ -38,7 +38,7 @@
             android:layout_marginTop="30dp"
             android:text="@string/search_fragment_title"
             android:paddingStart="22dp"
-            app:layout_constraintBottom_toTopOf="@id/btn_search"
+            app:layout_constraintBottom_toTopOf="@id/button_route_searcher"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.43"
             app:layout_constraintStart_toStartOf="parent"
