--- a/app/src/main/res/layout/activity_main_menu_organization.xml
+++ b/app/src/main/res/layout/activity_main_menu_organization.xml
@@ -35,4 +35,14 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <Button
+        android:id="@+id/buttonCreateDiscount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:text="Crear cupón"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCreateRouteOrg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
