Creacion y administracion de cupones completada
Creacion y administracion de cupones completada

--- a/app/src/main/res/layout/activity_create_coupon.xml
+++ b/app/src/main/res/layout/activity_create_coupon.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="25dp"
         android:background="@drawable/custom_input_login"
         android:ems="10"
-        android:hint="Nombre del descuento"
+        android:hint="@string/discount_name"
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textSize="24sp"
@@ -29,7 +29,7 @@
         android:layout_marginTop="25dp"
         android:background="@drawable/custom_input_login"
         android:ems="10"
-        android:hint="Porcentaje a aplicar"
+        android:hint="@string/percentage_to_apply"
         android:inputType="number"
         android:textAlignment="center"
         android:textSize="24sp"
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
-        android:text="Nombre"
+        android:text="@string/name"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="Porcentaje"
+        android:text="@string/percentage"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +70,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="50dp"
         android:background="@drawable/custom_button"
-        android:text="Crear"
+        android:text="@string/create_coupon"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
@@ -85,7 +85,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="50dp"
         android:background="@drawable/custom_button"
-        android:text="Cancelar"
+        android:text="@string/cancel_coupon"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,7 +96,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="CREAR NUEVO CUPÓN"
+        android:text="@string/title_new_coupon"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
